# JavaScript-Zip

./: .gitignore  .npmignore  CMakeLists.txt  JavaScript-Zip.cpp  LICENSE.txt  README.md  addon.cpp  binding.gyp  index.js  package-lock.json  package.json  unzipper.h  zipper.cpp  zipper.h  zipper_wasm.cpp
.github/workflows/: prebuilds.yml
lib/: binding.js
prebuilds/linux-arm64/: javascript-zip.node
prebuilds/linux-x64/: javascript-zip.node
prebuilds/linuxmusl-x64/: javascript-zip.node
prebuilds/win32-x64/: javascript-zip.node
src/: javascript_zip.cc
test/: test_binding.js
